added basic HTML for now before layering react in,

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,18 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <link href="/styles.css" rel="stylesheet" type="tex/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
 
 
   </head>
   <body>
-    <h1> Bag Advisor1</h1>>
+    <h1>Bag Advisor!</h1>
     <div id="app">
+      <div>placeholder for actual interactive app</div>
+      <input type="text" value="destination here" />
+      <button>Let's get Packing! </button>
     </div>
   </body>
-  <script>
-    ReactDOM.render(
-      </App > </App>, 
-      document.getElementById('app')
-    );
-  </script>
+  <script></script>
 </html>
 
