--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
 <html lang="en">
   <head>
     <link href="styles.css" rel="stylesheet" type="text/css">
-
-
+    <script src="/bundle.js" ></script>
   </head>
   <body>
     <h1>Bag Advisor!</h1>
@@ -12,6 +11,8 @@
       <div>placeholder for actual interactive app</div>
       <input type="text" value="destination here" />
       <button>Let's get Packing! </button>
+      <div id="mount" />
+      
     </div>
   </body>
   <script></script>
