basic form for first half crafted.

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,15 @@
 <html lang="en">
   <head>
     <link href="styles.css" rel="stylesheet" type="text/css">
-    <script src="/bundle.js" ></script>
+    
   </head>
   <body>
     <h1>Bag Advisor!</h1>
     <div id="app">
-      <div>placeholder for actual interactive app</div>
-      <input type="text" value="destination here" />
-      <button>Let's get Packing! </button>
-      <div id="mount" />
-      
+      Meow
     </div>
   </body>
   <script></script>
+  <script src="/bundle.js" ></script>
 </html>
 
